objects/XactlyCorp__XCIncentBusiness__c.object
<CustomObject>
    <description>This is used to save key to link with Incent.</description>
    <fields>
        <fullName>XactlyCorp__BusinessToken__c</fullName>
        <label>BusinessToken</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XactlyCorp__url2__c</fullName>
        <label>url2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XactlyCorp__url__c</fullName>
        <label>url</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>XCIncentBusiness</label>
    <nameField>
        <label>XCIncentBusiness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCIncentBusinesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>